# proyectoMH

./: .gitignore
codigo/: CMakeLists.txt  cec17_test_func.c  extract.py  solution.h  woa-hibridado.cpp  woa.cpp
